Updated job descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,10 @@
 
   <section id="whatido">
     <h2>Transforming Complexity into Simplicity</h2>
-    <p>With a deep background in software and support engineering, I specialize in crafting elegant solutions to complex challenges. By deconstructing intricate problems into manageable pieces, I ensure each aspect is tackled with precision, leading to efficient and effective outcomes.</p>
-    <p>Passionate Site Reliability Engineer with strong communication skills and a proven track record of automating and streamlining processes to enhance platform reliability. Experienced in collaborating with diverse teams and engaging technical communities. Eager to leverage my technical expertise and advocacy skills to drive developer engagement and support open-source innovation.</p>
+    <p>As a <strong>Software Production Management & Reliability Engineering Manager</strong> at Morgan Stanley, I lead teams to ensure the stability and scalability of critical systems, drive automation to minimize manual intervention, and implement proactive strategies to optimize platform performance. With a focus on operational excellence, I collaborate across teams to enhance incident management, streamline deployments, and deliver high-reliability solutions in fast-paced, high-stakes environments.</p>
+    <p><strong>Technical Problem Solver.</strong> Specializes in deconstructing complex challenges into precise, manageable solutions, ensuring efficient and effective outcomes.</p>
+    <p><strong>SRE & Developer Advocate.</strong> Passionate about automating processes to enhance platform reliability. Experienced in team collaboration, technical community engagement, and driving innovation through advocacy and expertise.</p>
+    <p><strong>Production Support Engineer.</strong> Focused on enhancing platform stability by driving best practices, resolving incidents efficiently, and empowering developers with reliable tools and workflows.</p>
   </section>
 
   <section id="highlights">
@@ -59,14 +61,14 @@
   <section id="experience">
     <h2>Experience</h2>
     <ul class="experience-group">
-      <li><strong>2024 GenAI Hackathon Finalist:</strong> Developed an automation that leveraged a RAG chatbot to extract resolution steps from internal documentation and seamlessly integrated them into PagerDuty alerts, improving incident response efficiency.</li>
-      <li>Reduced manual toil by 30% by automating repetitive tasks in Python, working with development teams to prioritize bug fixes, and streamlined procedures.</li>
-      <li>Reduced incident ticket volumes by an average of 33% YOY by proactively identifying and fixing issues.</li>
-      <li>Prepared and presented monthly updates to senior management and development leads.</li>
-      <li>Wrote and maintained internal support documentation, including system architectures and issue resolutions.</li>
-      <li>Interviewed, hired and mentored junior engineers on our team while promoting use of best practices.</li>
-      <li>Actively engaged with cross-functional teams to advocate for developer-friendly solutions.</li>
-      <li>Conduct weekly code reviews and approve production changes to client-facing trading systems.</li>
+      <li><strong>2024 GenAI Hackathon Finalist:</strong> Built an automation integrating a RAG chatbot to extract resolution steps from internal docs directly into PagerDuty alerts, enhancing incident response efficiency while reducing MTTR.</li>
+      <li><strong>Automation:</strong> Reduced Cut manual effort by 30% with Python automation, streamlined processes, and prioritized bug fixes with dev teams.</li>
+      <li><strong>Incident Reduction:</strong> Cut incident ticket volume by 33% YOY through proactive issue identification and resolution.</li>
+      <li><strong>Presentation Skills:</strong> Delivered monthly updates to senior management and dev leads.</li>
+      <li><strong>Technical Writing:</strong> Authored and updated internal support documentation on system architecture and issue resolution.</li>
+      <li><strong>Team Building:</strong> Hired, mentored, and guided junior engineers while championing best practices.</li>
+      <li><strong>Collaborative Advocacy</strong> Actively engaged with cross-functional teams to advocate for developer-friendly solutions.</li>
+      <li><strong>Code Oversight:</strong> Led weekly code reviews and approved production changes for client-facing trading systems.</li>
     </ul>
   </section>
 
@@ -159,11 +161,13 @@
       <li>Autosys</li>
       <li>ServiceNow</li>
       <li>OpenAI</li>
+      <li>Ansible</li>
     </ul>
     
     <h3>Soft Skills</h3>
     <ul class="no-list-style skills">
-      <li>Agile</li>
+      <li>Leadership</li>
+      <li>Cross-team collaboration</li>
       <li>Analytical</li>
       <li>DevOps</li>
       <li>SRE</li>
@@ -173,7 +177,7 @@
       <li>TOIL Reduction</li>
       <li>Team Player</li>
       <li>Critical Thinker</li>
-      <li>Project Managment</li>
+      <li>Project Management</li>
       <li>Disaster Recovery</li>
       <li>Capacity Management</li>
     </ul>
